--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
 		"check": "npm run type-check && npm run lint"
 	},
 	"dependencies": {
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.34.0",
+		"lucide-react": "^0.563.0",
+		"mongoose": "^9.1.6",
 		"next": "^16.1.6",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.4.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.14",
