--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
 		"@types/node": "^22",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"dotenv": "^17.2.4",
 		"postcss": "^8.4.49",
 		"tailwindcss": "^4.0.0",
+		"tsx": "^4.21.0",
 		"typescript": "^5"
 	}
 }
