--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"astronomy-engine": "^2.1.19",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.34.0",
+		"groq-sdk": "^0.37.0",
 		"lucide-react": "^0.563.0",
 		"mongoose": "^9.1.6",
 		"next": "^16.1.6",
