--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
-		"build": "next build",
+		"build": "next build --webpack",
 		"start": "next start",
 		"lint": "biome check .",
 		"lint:fix": "biome check --write .",
@@ -20,7 +20,7 @@
 		"framer-motion": "^12.34.0",
 		"groq-sdk": "^0.37.0",
 		"lucide-react": "^0.563.0",
-		"mongodb": "^7.1.0",
+		"mongodb": "^6.10.0",
 		"mongoose": "^9.1.6",
 		"next": "^16.1.6",
 		"next-auth": "^4.24.13",
